# plugincollider

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Resources/tests/: test.sc  test.tidal
Source/: OSCMessages.cpp  OSCMessages.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SCPluginAPI.cpp  SCPluginAPI.h  SCPluginDriver.cpp  SCPluginDriver.h  SCProcess.cpp  SCProcess.h  UDPPort.cpp  UDPPort.h
